# Meta

./: .dockerignore  .env.example  .gitignore  Dockerfile  HACKATHON.md  README.md  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_smoke.py  tests_output.txt
codereview_env/: __init__.py  client.py  config.py  models.py  safety.py
examples/: run_basic_agent.py  run_benchmark.py  run_grpo_training.py
frontend/: app.js  index.html  style.css
server/: Dockerfile  __init__.py  app.py  dataset_loader.py  environment.py  requirements.txt  reward.py  tasks.py
tests/: __init__.py  conftest.py  test_client.py  test_environment.py  test_inference.py  test_models.py  test_reward.py  test_safety.py
utils/: pagination.py
