[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codereview-env"
version = "2.0.0"
description = "Deterministic OpenEnv benchmark for real-world pull request review triage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["openenv", "code-review", "benchmark", "software-engineering", "rl"]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai>=1.50.0",
  "openenv>=0.1.6",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["codereview_env*", "server*"]
